--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,11 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
